--- a/config.env.template
+++ b/config.env.template
@@ -1,9 +1,9 @@
 # Change File Name to config.env
 
-API_ID = ""
-API_HASH = ""
-BOT_TOKEN = ""
-TO_CHATS = ""
-FROM_CHATS = ""
+API_ID = "1513130"
+API_HASH = "768b31ffa5ed7c6ffda67f306316614d"
+BOT_TOKEN = "1790881523:AAHIR0Am92sUI74wrrN-Q3uwQ-Yj_tDnvwE"
+TO_CHATS = "-1001465809255"
+FROM_CHATS = "-1001350981288"
 ADVANCE_CONFIG = ""
 TELEGRAM_SESSION = ""
